@@ -1,5 +1,10 @@
 2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: As explained in the previous entry i've decided to add reiser4 detection to gparted as well..
+
+2004-12-29 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
 	* Added support for reiser4 (only creation atm, since the other functionality appears to be non-free software :/ )
 	  Also, libparted isn't able to detect reiser4 yet, a patch to fix this is underway, but i should probably add reiser4 detection to gparted as well.
 
